Nail down the antrun plugin.
When I moved to maven-2.0.9, my build broke because it pulled in and older version. *sigh*

Looking closer makes me realise I don't need the forced version bump for ant in there any more either.  Hurrah.

--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,11 @@
             <arguments>-Pgpg -Dgpg.passphrase=${gpg.passphrase}</arguments>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>1.3</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
