--- a/jslint4java/pom.xml
+++ b/jslint4java/pom.xml
@@ -18,6 +18,11 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+	<dependency>
+	  <groupId>xmlunit</groupId>
+	  <artifactId>xmlunit</artifactId>
+	  <scope>test</scope>
+	</dependency>
   </dependencies>
   <build>
     <plugins>
