--- a/jslint4java/pom.xml
+++ b/jslint4java/pom.xml
@@ -14,6 +14,10 @@
       <artifactId>js</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.beust</groupId>
+      <artifactId>jcommander</artifactId>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
