--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
         <version>1.7R1</version>
       </dependency>
       <dependency>
+        <groupId>com.beust</groupId>
+        <artifactId>jcommander</artifactId>
+        <version>1.1</version>
+      </dependency>
+      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.7</version>
