Move cli bits into their own package.
It was getting a bit crowded in the main package.

--- a/jslint4java/pom.xml
+++ b/jslint4java/pom.xml
@@ -44,6 +44,6 @@
     </plugins>
   </build>
   <properties>
-    <mainClass>com.googlecode.jslint4java.Main</mainClass>
+    <mainClass>com.googlecode.jslint4java.cli.Main</mainClass>
   </properties>
 </project>
