--- a/jslint4java-ant/pom.xml
+++ b/jslint4java-ant/pom.xml
@@ -72,7 +72,7 @@
                   <shadedClassifierName>shaded</shadedClassifierName>
                   <transformers>
                     <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                      <mainClass>com.googlecode.jslint4java.Main</mainClass>
+                      <mainClass>com.googlecode.jslint4java.cli.Main</mainClass>
                     </transformer>
                   </transformers>
                 </configuration>
