--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>3</version>
+  </parent>
   <groupId>com.googlecode.jslint4java</groupId>
   <artifactId>jslint4java-parent</artifactId>
   <version>1.3.4-SNAPSHOT</version>
@@ -271,18 +276,6 @@
       </plugin>
     </plugins>
   </reporting>
-  <distributionManagement>
-    <repository>
-      <id>googlecode-releases</id>
-      <name>Googlecode Repository @ OSS.Sonatype</name>
-      <url>http://oss.sonatype.org/content/repositories/googlecode-releases/</url>
-    </repository>
-    <snapshotRepository>
-      <id>googlecode-snapshots</id>
-      <name>Googlecode Snapshots Repository @ OSS.Sonatype</name>
-      <url>http://oss.sonatype.org/content/repositories/googlecode-snapshots/</url>
-    </snapshotRepository>
-  </distributionManagement>
   <profiles>
     <profile>
       <id>dist</id>
