--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
     <url>http://code.google.com/p/jslint4java/issues/list</url>
   </issueManagement>
   <scm>
-    <url>http://github.com/happygiraffe/jslint4java/tree/master</url>
-    <connection>scm:git:git://github.com/happygiraffe/jslint4java.git</connection>
+    <url>http://github.com/happygiraffe/jslint4java</url>
+    <connection>scm:git:git@github.com:happygiraffe/jslint4java.git</connection>
     <developerConnection>scm:git:git@github.com:happygiraffe/jslint4java.git</developerConnection>
   </scm>
   <modules>
