--- a/jslint4java-ant/pom.xml
+++ b/jslint4java-ant/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.googlecode.jslint4java</groupId>
     <artifactId>jslint4java-parent</artifactId>
-    <version>1.4.5</version>
+    <version>1.4.6-SNAPSHOT</version>
   </parent>
   <dependencies>
     <dependency>
