--- a/jslint4java-dist/pom.xml
+++ b/jslint4java-dist/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <artifactId>jslint4java-parent</artifactId>
     <groupId>com.googlecode.jslint4java</groupId>
-    <version>1.4.6</version>
+    <version>1.4.7-SNAPSHOT</version>
   </parent>
   <profiles>
     <profile>
