--- a/jslint4java-ant/pom.xml
+++ b/jslint4java-ant/pom.xml
@@ -49,6 +49,7 @@
                 <ant antfile="${project.build.testOutputDirectory}/antunit/tests.xml" inheritAll="false" inheritRefs="false">
                   <property name="test.classpath" refid="maven.test.classpath" />
                   <property name="test.skipped" value="${maven.test.skip}" />
+                  <property name="test.report.dir" value="${project.build.directory}/surefire-reports" />
                 </ant>
               </target>
             </configuration>
