--- a/jslint4java/pom.xml
+++ b/jslint4java/pom.xml
@@ -38,8 +38,28 @@
             <manifestEntries>
               <Main-Class>${mainClass}</Main-Class>
             </manifestEntries>
+            <!-- Produced by bundle plugin, hopefully. -->
+            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
           </archive>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>bundle-manifest</id>
+            <phase>process-classes</phase>
+            <goals>
+              <goal>manifest</goal>
+            </goals>
+            <configuration>
+              <instructions>
+                <Bundle-SymbolicName>${project.groupId}</Bundle-SymbolicName>
+              </instructions>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
