--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,20 @@
           <artifactId>maven-bundle-plugin</artifactId>
           <version>2.3.4</version>
           <extensions>true</extensions>
+          <executions>
+            <execution>
+              <id>bundle-manifest</id>
+              <phase>process-classes</phase>
+              <goals>
+                <goal>manifest</goal>
+              </goals>
+              <configuration>
+                <instructions>
+                  <Bundle-SymbolicName>${project.groupId}</Bundle-SymbolicName>
+                </instructions>
+              </configuration>
+            </execution>
+          </executions>
         </plugin>
       </plugins>
     </pluginManagement>
