--- a/jslint4java-ant/pom.xml
+++ b/jslint4java-ant/pom.xml
@@ -37,6 +37,20 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <!-- Produced by bundle plugin, hopefully. -->
+            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+          </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+      </plugin>
+      <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
         <executions>
           <execution>
@@ -79,6 +93,10 @@
                   <transformers>
                     <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                       <mainClass>com.googlecode.jslint4java.cli.Main</mainClass>
+                      <manifestEntries>
+                        <!-- TODO: fix this properly, somehow. -->
+                        <WARNING>This is an invalid OSGI Bundle.</WARNING>
+                      </manifestEntries>
                     </transformer>
                   </transformers>
                 </configuration>
