Set a default option for the tests.
Which means I have to switch to an ES builtin, not an HTML one.

--- a/jslint4java-maven-plugin/src/test/resources/com/googlecode/jslint4java/maven/pom.xml
+++ b/jslint4java-maven-plugin/src/test/resources/com/googlecode/jslint4java/maven/pom.xml
@@ -11,7 +11,9 @@
         <artifactId>jslint4java-maven-plugin</artifactId>
         <version>1.5-SNAPSHOT</version>
         <configuration>
-          <!-- ??? -->
+          <options>
+            <undef>true</undef>
+          </options>
         </configuration>
       </plugin>
     </plugins>
