--- a/jslint4java-maven-plugin/pom.xml
+++ b/jslint4java-maven-plugin/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>jslint4java-parent</artifactId>
     <groupId>com.googlecode.jslint4java</groupId>
-    <version>1.4.8-SNAPSHOT</version>
+    <version>2.0.0</version>
   </parent>
   <artifactId>jslint4java-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
