--- a/pom.xml
+++ b/pom.xml
@@ -65,9 +65,9 @@
         <type>zip</type>
       </dependency>
       <dependency>
-        <groupId>rhino</groupId>
-        <artifactId>js</artifactId>
-        <version>1.7R2</version>
+        <groupId>org.mozilla</groupId>
+        <artifactId>rhino</artifactId>
+        <version>1.7R3</version>
       </dependency>
       <dependency>
         <groupId>com.beust</groupId>
