Pull in guava for tests.

--- a/jslint4java/pom.xml
+++ b/jslint4java/pom.xml
@@ -27,6 +27,11 @@
       <artifactId>xmlunit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
