--- a/jslint4java/pom.xml
+++ b/jslint4java/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.googlecode.jslint4java</groupId>
     <artifactId>jslint4java-parent</artifactId>
-    <version>2.0.2</version>
+    <version>2.0.3-SNAPSHOT</version>
   </parent>
   <dependencies>
     <dependency>
