--- a/jslint4java-maven-plugin/src/test/resources/com/googlecode/jslint4java/maven/pom.xml
+++ b/jslint4java-maven-plugin/src/test/resources/com/googlecode/jslint4java/maven/pom.xml
@@ -14,6 +14,7 @@
           <options>
             <undef>true</undef>
           </options>
+          <checkFileModificationTimes>true</checkFileModificationTimes>
         </configuration>
       </plugin>
     </plugins>
