Try to get Java 5 annotations working.

--- a/jslint4java-maven-plugin/pom.xml
+++ b/jslint4java-maven-plugin/pom.xml
@@ -54,6 +54,10 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <!-- Needed for Java 5 annotation based configuration, for some reason. -->
+          <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+        </configuration>
       </plugin>
     </plugins>
   </build>
