Generate descriptor in the right phase.
If we want to process annotations, we need the compiled class files to be available.

--- a/jslint4java-maven-plugin/pom.xml
+++ b/jslint4java-maven-plugin/pom.xml
@@ -48,6 +48,15 @@
         <version>3.0</version>
         <executions>
           <execution>
+            <id>default-descriptor</id>
+            <goals>
+              <goal>descriptor</goal>
+            </goals>
+            <!-- We have to run this _after_ we have generated the classes so that the annotations
+                 are available to be scanned. -->
+            <phase>process-classes</phase>
+          </execution>
+          <execution>
             <id>generated-helpmojo</id>
             <goals>
               <goal>helpmojo</goal>
