--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.10</version>
+        <version>4.11-beta-1</version>
       </dependency>
       <dependency>
         <groupId>xmlunit</groupId>
