Put the HelpMojo in the correct package.
This only really affects the generated javadoc, but it is ugly having it
appear in the default package.

--- a/jslint4java-maven-plugin/pom.xml
+++ b/jslint4java-maven-plugin/pom.xml
@@ -71,6 +71,9 @@
             <goals>
               <goal>helpmojo</goal>
             </goals>
+            <configuration>
+              <helpPackageName>com.googlecode.jslint4java.maven</helpPackageName>
+            </configuration>
           </execution>
         </executions>
         <configuration>
