--- a/jslint4java-docs/pom.xml
+++ b/jslint4java-docs/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>com.googlecode.jslint4java</groupId>
     <artifactId>jslint4java-parent</artifactId>
-    <version>2.0.3-SNAPSHOT</version>
+    <version>2.0.3</version>
   </parent>
   <build>
     <resources>
