Fix the tests: no more undef option.

--- a/jslint4java-maven-plugin/src/test/resources/com/googlecode/jslint4java/maven/pom.xml
+++ b/jslint4java-maven-plugin/src/test/resources/com/googlecode/jslint4java/maven/pom.xml
@@ -12,7 +12,7 @@
         <version>1.5-SNAPSHOT</version>
         <configuration>
           <options>
-            <undef>true</undef>
+            <es5>true</es5>
           </options>
         </configuration>
       </plugin>
