--- a/jslint4java-maven-plugin/pom.xml
+++ b/jslint4java-maven-plugin/pom.xml
@@ -49,6 +49,11 @@
       <artifactId>sisu-guava</artifactId>
       <version>0.11.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-library</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
