--- a/jslint4java-maven-plugin/pom.xml
+++ b/jslint4java-maven-plugin/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>jslint4java-parent</artifactId>
     <groupId>com.googlecode.jslint4java</groupId>
-    <version>2.0.5</version>
+    <version>2.0.6-SNAPSHOT</version>
   </parent>
   <artifactId>jslint4java-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
