--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <groupId>com.googlecode.jslint4java</groupId>
   <artifactId>jslint4java-parent</artifactId>
-  <version>2.0.5</version>
+  <version>2.0.6-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>jslint4java parent</name>
   <url>http://code.google.com/p/jslint4java/</url>
@@ -40,7 +40,7 @@
     <url>http://github.com/happygiraffe/jslint4java</url>
     <connection>scm:git:git@github.com:happygiraffe/jslint4java.git</connection>
     <developerConnection>scm:git:git@github.com:happygiraffe/jslint4java.git</developerConnection>
-    <tag>rel-2.0.5</tag>
+    <tag>HEAD</tag>
   </scm>
   <modules>
     <module>jslint4java</module>
